--- a/index.html
+++ b/index.html
@@ -321,12 +321,12 @@
             </div>
 
             <!-- bottom -->
-            <div class="s-100vh_btm d-f-row-f_s-s_b w-100 all-w">
+            <div class="s-100vh_btm d-f-row-f_s-s_b w-100 all-w  eff-opacity-no _anim-items">
                 <!-- left -->
                 <div class="blc-w-l d-f-column-f_s-f_s"></div>
                 <!-- right -->
                 <div class="blc-w-r big_title-in-100vh d-f-column-f_s-f_s">
-                    <div class="ttl_abs_b eff-opacity-no _anim-items">
+                    <div class="ttl_abs_b _anim-items _anim-items-translate_left">
                         <p>struggle</p>
                     </div>
                 </div><!-- ./ right -->
@@ -343,7 +343,7 @@
                     <!-- left -->
                     <div class="blc-w-l m-abt_l d-f-column-f_s-f_s">
                         <div class="blck_hidden">
-                            <h5 class="txt_hidden-1 _anim-items">О нас</h5>
+                            <h5>О нас</h5>
                         </div>
                     </div>
 
@@ -420,7 +420,7 @@
                 <!-- left -->
                 <div class="blc-w-l m-services_l d-f-column-f_s-f_s">
                     <div class="blck_hidden">
-                        <h5 class="txt_hidden-1 _anim-items">Услуги</h5>
+                        <h5>Услуги</h5>
                     </div>
                 </div>
 
@@ -825,7 +825,7 @@
                 <!-- left -->
                 <div class="blc-w-l m-why-we_l d-f-column-f_s-f_s">
                     <div class="blck_hidden">
-                        <h5 class="txt_hidden-1 _anim-items">Почему мы</h5>
+                        <h5>Почему мы</h5>
                     </div>
                 </div>
 
@@ -837,9 +837,11 @@
                             <div class="m-why-we_itm_wr d-f-row-f_s-s_b">
                                 <!-- left -->
                                 <div class="m-why-we_itm_l">
-                                    <figure class="_anim-items anim-circle d-f-row-c-c" data-percent="100">
+                                    <figure class="d-f-row-c-c">
                                         <svg height="22" width="22" fill="none">
-                                            <circle cx="11" cy="11" r="10"></circle>
+                                            <circle cx="11" cy="11" r="10" stroke="#FFFFFF" stroke-width="1px"
+                                                fill="transparent">
+                                            </circle>
                                         </svg>
                                     </figure>
                                 </div>
@@ -861,9 +863,11 @@
                             <div class="m-why-we_itm_wr d-f-row-f_s-s_b">
                                 <!-- left -->
                                 <div class="m-why-we_itm_l">
-                                    <figure class="_anim-items anim-circle d-f-row-c-c" data-percent="100">
+                                    <figure class="d-f-row-c-c">
                                         <svg height="22" width="22" fill="none">
-                                            <circle cx="11" cy="11" r="10"></circle>
+                                            <circle cx="11" cy="11" r="10" stroke="#FFFFFF" stroke-width="1px"
+                                                fill="transparent">
+                                            </circle>
                                         </svg>
                                     </figure>
                                 </div>
@@ -884,9 +888,11 @@
                             <div class="m-why-we_itm_wr d-f-row-f_s-s_b">
                                 <!-- left -->
                                 <div class="m-why-we_itm_l">
-                                    <figure class="_anim-items anim-circle d-f-row-c-c" data-percent="100">
+                                    <figure class="d-f-row-c-c">
                                         <svg height="22" width="22" fill="none">
-                                            <circle cx="11" cy="11" r="10"></circle>
+                                            <circle cx="11" cy="11" r="10" stroke="#FFFFFF" stroke-width="1px"
+                                                fill="transparent">
+                                            </circle>
                                         </svg>
                                     </figure>
                                 </div>
@@ -909,9 +915,11 @@
                             <div class="m-why-we_itm_wr d-f-row-f_s-s_b">
                                 <!-- left -->
                                 <div class="m-why-we_itm_l">
-                                    <figure class="_anim-items anim-circle d-f-row-c-c" data-percent="100">
+                                    <figure class="d-f-row-c-c">
                                         <svg height="22" width="22" fill="none">
-                                            <circle cx="11" cy="11" r="10"></circle>
+                                            <circle cx="11" cy="11" r="10" stroke="#FFFFFF" stroke-width="1px"
+                                                fill="transparent">
+                                            </circle>
                                         </svg>
                                     </figure>
                                 </div>
@@ -934,9 +942,11 @@
                             <div class="m-why-we_itm_wr d-f-row-f_s-s_b">
                                 <!-- left -->
                                 <div class="m-why-we_itm_l">
-                                    <figure class="_anim-items anim-circle d-f-row-c-c" data-percent="100">
+                                    <figure class="d-f-row-c-c">
                                         <svg height="22" width="22" fill="none">
-                                            <circle cx="11" cy="11" r="10"></circle>
+                                            <circle cx="11" cy="11" r="10" stroke="#FFFFFF" stroke-width="1px"
+                                                fill="transparent">
+                                            </circle>
                                         </svg>
                                     </figure>
                                 </div>
@@ -957,9 +967,11 @@
                             <div class="m-why-we_itm_wr d-f-row-f_s-s_b">
                                 <!-- left -->
                                 <div class="m-why-we_itm_l">
-                                    <figure class="_anim-items anim-circle d-f-row-c-c" data-percent="100">
+                                    <figure class="d-f-row-c-c">
                                         <svg height="22" width="22" fill="none">
-                                            <circle cx="11" cy="11" r="10"></circle>
+                                            <circle cx="11" cy="11" r="10" stroke="#FFFFFF" stroke-width="1px"
+                                                fill="transparent">
+                                            </circle>
                                         </svg>
                                     </figure>
                                 </div>
@@ -988,7 +1000,7 @@
                 <div class="m-proud_top w-100 d-f-row-f_s-s_b">
                     <!-- left -->
                     <div class="blc-w-l m-proud_l d-f-column-f_s-f_s">
-                        <h5 class="effect-title _anim-items">Почему мы</h5>
+                        <h5>Почему мы</h5>
                     </div>
 
                     <!-- right -->
@@ -1062,20 +1074,22 @@
                                                 </div>
                                                 <ul>
                                                     <li class="eff-opacity_no-tr _anim-items">
-                                                        <figure class="_anim-items anim-circle d-f-row-c-c"
-                                                            data-percent="100">
-                                                            <svg height="22" width="22" fill="none">
-                                                                <circle cx="11" cy="11" r="10"></circle>
+                                                        <figure class="d-f-row-c-c">
+                                                            <svg height="14" width="14" fill="none">
+                                                                <circle cx="7" cy="7" r="6" stroke="#011D45"
+                                                                    stroke-width="1px" fill="transparent">
+                                                                </circle>
                                                             </svg>
                                                         </figure>
                                                         AVER LEX – единоличный лидер среди компаний
                                                     </li>
 
                                                     <li class="eff-opacity_no-tr _anim-items">
-                                                        <figure class="_anim-items anim-circle d-f-row-c-c"
-                                                            data-percent="100">
-                                                            <svg height="22" width="22" fill="none">
-                                                                <circle cx="11" cy="11" r="10"></circle>
+                                                        <figure class="d-f-row-c-c">
+                                                            <svg height="14" width="14" fill="none">
+                                                                <circle cx="7" cy="7" r="6" stroke="#011D45"
+                                                                    stroke-width="1px" fill="transparent">
+                                                                </circle>
                                                             </svg>
                                                         </figure>
                                                         Ольга Просянюк, Виталий Сердюк, Игорь Федоренко и Артем Дроздов
@@ -1116,20 +1130,22 @@
                                                 </div>
                                                 <ul>
                                                     <li class="eff-opacity_no-tr _anim-items">
-                                                        <figure class="_anim-items anim-circle d-f-row-c-c"
-                                                            data-percent="100">
-                                                            <svg height="22" width="22" fill="none">
-                                                                <circle cx="11" cy="11" r="10"></circle>
+                                                        <figure class="d-f-row-c-c">
+                                                            <svg height="14" width="14" fill="none">
+                                                                <circle cx="7" cy="7" r="6" stroke="#011D45"
+                                                                    stroke-width="1px" fill="transparent">
+                                                                </circle>
                                                             </svg>
                                                         </figure>
                                                         AVER LEX – единоличный лидер среди компаний
                                                     </li>
 
                                                     <li class="eff-opacity_no-tr _anim-items">
-                                                        <figure class="_anim-items anim-circle d-f-row-c-c"
-                                                            data-percent="100">
-                                                            <svg height="22" width="22" fill="none">
-                                                                <circle cx="11" cy="11" r="10"></circle>
+                                                        <figure class="d-f-row-c-c">
+                                                            <svg height="14" width="14" fill="none">
+                                                                <circle cx="7" cy="7" r="6" stroke="#011D45"
+                                                                    stroke-width="1px" fill="transparent">
+                                                                </circle>
                                                             </svg>
                                                         </figure>
                                                         Ольга Просянюк, Виталий Сердюк, Игорь Федоренко и Артем Дроздов
@@ -1170,20 +1186,22 @@
                                                 </div>
                                                 <ul>
                                                     <li class="eff-opacity_no-tr _anim-items">
-                                                        <figure class="_anim-items anim-circle d-f-row-c-c"
-                                                            data-percent="100">
-                                                            <svg height="22" width="22" fill="none">
-                                                                <circle cx="11" cy="11" r="10"></circle>
+                                                        <figure class="d-f-row-c-c">
+                                                            <svg height="14" width="14" fill="none">
+                                                                <circle cx="7" cy="7" r="6" stroke="#011D45"
+                                                                    stroke-width="1px" fill="transparent">
+                                                                </circle>
                                                             </svg>
                                                         </figure>
                                                         AVER LEX – единоличный лидер среди компаний
                                                     </li>
 
                                                     <li class="eff-opacity_no-tr _anim-items">
-                                                        <figure class="_anim-items anim-circle d-f-row-c-c"
-                                                            data-percent="100">
-                                                            <svg height="22" width="22" fill="none">
-                                                                <circle cx="11" cy="11" r="10"></circle>
+                                                        <figure class="d-f-row-c-c">
+                                                            <svg height="14" width="14" fill="none">
+                                                                <circle cx="7" cy="7" r="6" stroke="#011D45"
+                                                                    stroke-width="1px" fill="transparent">
+                                                                </circle>
                                                             </svg>
                                                         </figure>
                                                         Ольга Просянюк, Виталий Сердюк, Игорь Федоренко и Артем Дроздов
