--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                                 </svg>
                             </button>
 
-                            <div class="s-100vh_show-lang">
+                            <div class="s-100vh_show-lang lang_100vh">
                                 <div class="s-100vh_show-lang_wr w-100">
                                     <ul>
                                         <li><a href="#">Ua</a></li>
@@ -449,7 +449,7 @@
                             </div><!-- ./ main -->
 
                             <!-- show -->
-                            <div class="m_about-item_show d-f-column-f_s-f_s pos-rel anim-border-b-l _anim-items">
+                            <div class="m_about-item_show d-f-column-f_s-f_s">
                                 <div class="m_about-item_show_txt w-100 d-f-column-f_s-f_s">
                                     <p class="_anim-items txt_li">Известные как «беловоротничковые преступления»,
                                         которые совершаются для получения
@@ -483,7 +483,7 @@
                             </div><!-- ./ main -->
 
                             <!-- show -->
-                            <div class="m_about-item_show d-f-column-f_s-f_s pos-rel anim-border-b-l _anim-items">
+                            <div class="m_about-item_show d-f-column-f_s-f_s">
                                 <div class="m_about-item_show_txt w-100 d-f-column-f_s-f_s">
                                     <p class="_anim-items txt_li">Известные как «беловоротничковые преступления»,
                                         которые совершаются для получения
@@ -517,7 +517,7 @@
                             </div><!-- ./ main -->
 
                             <!-- show -->
-                            <div class="m_about-item_show d-f-column-f_s-f_s pos-rel anim-border-b-l _anim-items">
+                            <div class="m_about-item_show d-f-column-f_s-f_s">
                                 <div class="m_about-item_show_txt w-100 d-f-column-f_s-f_s">
                                     <p class="_anim-items txt_li">Известные как «беловоротничковые преступления»,
                                         которые совершаются для получения
@@ -551,7 +551,7 @@
                             </div><!-- ./ main -->
 
                             <!-- show -->
-                            <div class="m_about-item_show d-f-column-f_s-f_s pos-rel anim-border-b-l _anim-items">
+                            <div class="m_about-item_show d-f-column-f_s-f_s">
                                 <div class="m_about-item_show_txt w-100 d-f-column-f_s-f_s">
                                     <p class="_anim-items txt_li">Известные как «беловоротничковые преступления»,
                                         которые совершаются для получения
@@ -585,7 +585,7 @@
                             </div><!-- ./ main -->
 
                             <!-- show -->
-                            <div class="m_about-item_show d-f-column-f_s-f_s pos-rel anim-border-b-l _anim-items">
+                            <div class="m_about-item_show d-f-column-f_s-f_s">
                                 <div class="m_about-item_show_txt w-100 d-f-column-f_s-f_s">
                                     <p class="_anim-items txt_li">Известные как «беловоротничковые преступления»,
                                         которые совершаются для получения
@@ -837,7 +837,7 @@
                             <div class="m-why-we_itm_wr d-f-row-f_s-s_b">
                                 <!-- left -->
                                 <div class="m-why-we_itm_l">
-                                    <figure class="d-f-row-c-c">
+                                    <figure class="d-f-row-c-c eff-opacity_no-tr _anim-items">
                                         <svg height="22" width="22" fill="none">
                                             <circle cx="11" cy="11" r="10" stroke="#FFFFFF" stroke-width="1px"
                                                 fill="transparent">
@@ -863,7 +863,7 @@
                             <div class="m-why-we_itm_wr d-f-row-f_s-s_b">
                                 <!-- left -->
                                 <div class="m-why-we_itm_l">
-                                    <figure class="d-f-row-c-c">
+                                    <figure class="d-f-row-c-c eff-opacity_no-tr _anim-items">
                                         <svg height="22" width="22" fill="none">
                                             <circle cx="11" cy="11" r="10" stroke="#FFFFFF" stroke-width="1px"
                                                 fill="transparent">
@@ -888,7 +888,7 @@
                             <div class="m-why-we_itm_wr d-f-row-f_s-s_b">
                                 <!-- left -->
                                 <div class="m-why-we_itm_l">
-                                    <figure class="d-f-row-c-c">
+                                    <figure class="d-f-row-c-c eff-opacity_no-tr _anim-items">
                                         <svg height="22" width="22" fill="none">
                                             <circle cx="11" cy="11" r="10" stroke="#FFFFFF" stroke-width="1px"
                                                 fill="transparent">
@@ -915,7 +915,7 @@
                             <div class="m-why-we_itm_wr d-f-row-f_s-s_b">
                                 <!-- left -->
                                 <div class="m-why-we_itm_l">
-                                    <figure class="d-f-row-c-c">
+                                    <figure class="d-f-row-c-c eff-opacity_no-tr _anim-items">
                                         <svg height="22" width="22" fill="none">
                                             <circle cx="11" cy="11" r="10" stroke="#FFFFFF" stroke-width="1px"
                                                 fill="transparent">
@@ -942,7 +942,7 @@
                             <div class="m-why-we_itm_wr d-f-row-f_s-s_b">
                                 <!-- left -->
                                 <div class="m-why-we_itm_l">
-                                    <figure class="d-f-row-c-c">
+                                    <figure class="d-f-row-c-c eff-opacity_no-tr _anim-items">
                                         <svg height="22" width="22" fill="none">
                                             <circle cx="11" cy="11" r="10" stroke="#FFFFFF" stroke-width="1px"
                                                 fill="transparent">
@@ -967,7 +967,7 @@
                             <div class="m-why-we_itm_wr d-f-row-f_s-s_b">
                                 <!-- left -->
                                 <div class="m-why-we_itm_l">
-                                    <figure class="d-f-row-c-c">
+                                    <figure class="d-f-row-c-c eff-opacity_no-tr _anim-items">
                                         <svg height="22" width="22" fill="none">
                                             <circle cx="11" cy="11" r="10" stroke="#FFFFFF" stroke-width="1px"
                                                 fill="transparent">
