--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                                 <div class="s-100vh_show-lang_wr w-100">
                                     <ul>
                                         <li><a href="#">Ua</a></li>
-                                        <li><a href="#">Eng</a></li>
+                                        <li><a href="#">En</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -275,7 +275,7 @@
                                 <div class="s-100vh_show-lang_wr w-100">
                                     <ul>
                                         <li><a href="#">Ua</a></li>
-                                        <li><a href="#">Eng</a></li>
+                                        <li><a href="#">En</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -837,7 +837,7 @@
                             <div class="m-why-we_itm_wr d-f-row-f_s-s_b">
                                 <!-- left -->
                                 <div class="m-why-we_itm_l">
-                                    <figure class="d-f-row-c-c eff-opacity_no-tr _anim-items">
+                                    <figure class="d-f-row-c-c eff-opacity_no-tr-why _anim-items">
                                         <svg height="22" width="22" fill="none">
                                             <circle cx="11" cy="11" r="10" stroke="#FFFFFF" stroke-width="1px"
                                                 fill="transparent">
@@ -863,7 +863,7 @@
                             <div class="m-why-we_itm_wr d-f-row-f_s-s_b">
                                 <!-- left -->
                                 <div class="m-why-we_itm_l">
-                                    <figure class="d-f-row-c-c eff-opacity_no-tr _anim-items">
+                                    <figure class="d-f-row-c-c eff-opacity_no-tr-why _anim-items">
                                         <svg height="22" width="22" fill="none">
                                             <circle cx="11" cy="11" r="10" stroke="#FFFFFF" stroke-width="1px"
                                                 fill="transparent">
@@ -888,7 +888,7 @@
                             <div class="m-why-we_itm_wr d-f-row-f_s-s_b">
                                 <!-- left -->
                                 <div class="m-why-we_itm_l">
-                                    <figure class="d-f-row-c-c eff-opacity_no-tr _anim-items">
+                                    <figure class="d-f-row-c-c eff-opacity_no-tr-why _anim-items">
                                         <svg height="22" width="22" fill="none">
                                             <circle cx="11" cy="11" r="10" stroke="#FFFFFF" stroke-width="1px"
                                                 fill="transparent">
@@ -915,7 +915,7 @@
                             <div class="m-why-we_itm_wr d-f-row-f_s-s_b">
                                 <!-- left -->
                                 <div class="m-why-we_itm_l">
-                                    <figure class="d-f-row-c-c eff-opacity_no-tr _anim-items">
+                                    <figure class="d-f-row-c-c eff-opacity_no-tr-why _anim-items">
                                         <svg height="22" width="22" fill="none">
                                             <circle cx="11" cy="11" r="10" stroke="#FFFFFF" stroke-width="1px"
                                                 fill="transparent">
@@ -942,7 +942,7 @@
                             <div class="m-why-we_itm_wr d-f-row-f_s-s_b">
                                 <!-- left -->
                                 <div class="m-why-we_itm_l">
-                                    <figure class="d-f-row-c-c eff-opacity_no-tr _anim-items">
+                                    <figure class="d-f-row-c-c eff-opacity_no-tr-why _anim-items">
                                         <svg height="22" width="22" fill="none">
                                             <circle cx="11" cy="11" r="10" stroke="#FFFFFF" stroke-width="1px"
                                                 fill="transparent">
@@ -967,7 +967,7 @@
                             <div class="m-why-we_itm_wr d-f-row-f_s-s_b">
                                 <!-- left -->
                                 <div class="m-why-we_itm_l">
-                                    <figure class="d-f-row-c-c eff-opacity_no-tr _anim-items">
+                                    <figure class="d-f-row-c-c eff-opacity_no-tr-why _anim-items">
                                         <svg height="22" width="22" fill="none">
                                             <circle cx="11" cy="11" r="10" stroke="#FFFFFF" stroke-width="1px"
                                                 fill="transparent">
