--- a/index.html
+++ b/index.html
@@ -728,6 +728,11 @@
                                     <div class="m-partners_sld-item_top w-100 d-f-column-f_s-f_s">
                                         <div class="m-partners_sld-item_img d-f-row-c-c img_scale _anim-items">
                                             <img src="images/png/partner-5.png" alt="partner-5">
+                                            <!-- link -->
+                                            <div
+                                                class="m-partners_sld-item_btm w-100 simple-link-ef _anim-items eff-opacity">
+                                                <a href="partner-item.html">Подробнее</a>
+                                            </div><!-- ./ link -->
                                         </div>
                                         <div class="blck_hidden">
                                             <h2 class="txt_hidden-1 _anim-items">Юлия Патий</h2>
@@ -735,11 +740,6 @@
                                         <p class="_anim-items eff-opacity">Партнёр, СЕО</p>
 
                                     </div><!-- ./ top -->
-                                    <!-- bottom -->
-                                    <div
-                                        class="m-partners_sld-item_btm w-100 simple-link-ef d-f-column-f_s-f_s _anim-items eff-opacity">
-                                        <a href="partner-item.html">Подробнее</a>
-                                    </div><!-- ./ bottom -->
                                 </div>
                             </div><!-- ./ slider itm 5 -->
                         </div>
