--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                             </linearGradient>
                             <path fill-rule="evenodd" clip-rule="evenodd"
                                 d="M28.175 84.9572L56.35 36.5905L84.9519 84.9572L91.7822 96.3129H113.127L84.9519 48.3667L56.35 0L28.175 48.3667L0 96.7334H21.3447L28.175 84.9572Z"
-                                fill="url(#Gradient1)" />
+                                fill="url(#Gradient1)" stroke="white" stroke-width="0.2" />
                         </g>
 
                         <g class="main-path-2 main-path">
