--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <!-- logo averlex full -->
     <div id="start-full-logo" class="start-full-logo w-100 d-f-colum-c-c">
         <div id="start-full-logo_wr" class="start-full-logo_wr w-100 d-f-colum-c-c">
-            <div class="start-full-logo_cnt">
+            <div class="start-full-logo_cnt d-f-colum-c-c">
                 <svg id="this-svg" fill="none" xmlns="http://www.w3.org/2000/svg" class="d-f-row-c-c">
                     <g id="main-svg-gs">
                         <g class="main-path-1 main-path">
@@ -198,6 +198,15 @@
                         </g>
                     </g>
                 </svg>
+                <div class="btn-preloader d-f-colum-c-c w-100">
+                    <div class="scroll-downs">
+                        <div class="mousey">
+                            <div class="scroller"></div>
+                        </div>
+                    </div>
+
+                    <p>scroll down</p>
+                </div>
             </div>
 
         </div>
