--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                         </g>
                     </g>
                 </svg>
-                <div class="btn-preloader d-f-colum-c-c w-100">
+                <div id="btn-preloader" class="btn-preloader d-f-colum-c-c">
                     <div class="scroll-downs">
                         <div class="mousey">
                             <div class="scroller"></div>
